--- a/templates/home-anon.html
+++ b/templates/home-anon.html
@@ -5,5 +5,6 @@
     <h4>New to Warbler?</h4>
     <p>Sign up now to get your own personalized timeline!</p>
     <a href="/signup" class="btn btn-primary">Sign up</a>
+    <a href="/login" class="btn btn-outline-secondary my-2">Log in</a>
   </div>
 {% endblock %}
