--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
   <div class="row">
-
     <aside class="col-md-4 col-lg-3 col-sm-12" id="home-aside">
       <div class="card user-card">
         <div>
@@ -51,7 +50,19 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
-            <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+
+            {% if msg in g.user.likes %}
+            <form method="POST" action="/users/remove_like/{{ msg.id }}" id="messages-form" data-link="/">
+              <button class="
+                btn 
+                btn-sm 
+                {{'btn-primary' if msg.id in likes else 'btn-primary'}}"
+              >
+                <i class="fa fa-thumbs-up"></i> 
+              </button>
+            </form>
+            {% else %}
+            <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form" data-link="/">
               <button class="
                 btn 
                 btn-sm 
@@ -60,6 +71,7 @@
                 <i class="fa fa-thumbs-up"></i> 
               </button>
             </form>
+            {% endif %}
           </li>
         {% endfor %}
       </ul>
