--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -17,27 +17,30 @@
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
             <p>{{ message.text }}</p>
           </div>
-          {% if message in g.user.likes %}
-            <form method="POST" action="/users/remove_like/{{ message.id }}" id="messages-form">
-              <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if message.id in likes else 'btn-primary'}}"
-              >
-                <i class="fa fa-thumbs-up"></i> 
-              </button>
-            </form>
-            {% else %}
-            <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
-              <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if message.id in likes else 'btn-secondary'}}"
-              >
-                <i class="fa fa-thumbs-up"></i> 
-              </button>
-            </form>
+          {% if message.user.id != g.user.id %}
+            {% if message in g.user.likes %}
+                <form method="POST" action="/users/remove_like/{{ message.id }}" id="messages-form">
+                <button class="
+                    btn 
+                    btn-sm 
+                    {{'btn-primary' if message.id in likes else 'btn-primary'}}"
+                >
+                    <i class="fa fa-thumbs-up"></i> 
+                </button>
+                </form>
+                {% else %}
+                <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
+                <button class="
+                    btn 
+                    btn-sm 
+                    {{'btn-primary' if message.id in likes else 'btn-secondary'}}"
+                >
+                    <i class="fa fa-thumbs-up"></i> 
+                </button>
+                </form>
+                {% endif %}
             {% endif %}
+          
         </li>
 
       {% endfor %}
