--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -2,7 +2,6 @@
 {% block user_details %}
   <div class="col-sm-6">
     <ul class="list-group" id="messages">
-
       {% for message in messages %}
 
         <li class="list-group-item">
@@ -17,6 +16,7 @@
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
             <p>{{ message.text }}</p>
           </div>
+          {% if message.user.id != g.user.id %}
           {% if message in g.user.likes %}
             <form method="POST" action="/users/remove_like/{{ message.id }}" id="messages-form" >
               <button class="
@@ -37,6 +37,7 @@
                 <i class="fa fa-thumbs-up"></i> 
               </button>
             </form>
+            {% endif %}
             {% endif %}
         </li>
 
